--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,10 @@
-// this is for css
+body {
+  background-color: black;
+}
+div#board {
+  position: relative;
+  width: 1024px;
+  height: 863;
+  margin: auto;
+  background: url("../images/board.jpg") no-repeat;
+}
