add style for messagearea

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,9 @@ div#board {
   margin: auto;
   background: url("../images/board.jpg") no-repeat;
 }
+div#messageArea {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  color: rgb(83, 175, 19);
+}
