--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,3 +36,9 @@ form input {
   border-color: rgb(83, 175, 19);
   font-size: 1em;
 }
+.hit {
+  background: url("../images/ship.png") no-repeat center center;
+}
+.miss {
+  background: url("../images/miss.png") no-repeat center center;
+}
